cabal-version:       3.0
name:                om-time
version:             0.1.3.0
synopsis:            Time utilities for OM style programming.
-- description:
license:             NONE
license-file:        LICENSE
author:              Rick Owens
maintainer:          rick@owensmurray.com
copyright:           2022 Rick Owens
-- category:
build-type:          Simple
extra-source-files:

common dependencies
  build-depends:
    , aeson        >= 1.4.7.1 && < 1.5
    , base         >= 4.13    && < 4.14
    , binary       >= 0.8.7.0 && < 0.9
    , clock        >= 0.8     && < 0.9
    , lens         >= 4.18.1  && < 4.19
    , om-json      >= 0.2.5.2 && < 0.3
    , swagger2     >= 2.5     && < 2.6
    , time         >= 1.9.3   && < 1.10
    , transformers >= 0.5.6.2 && < 0.6

common warnings
  ghc-options:
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Wmissing-import-lists
    -Wredundant-constraints
    -Wall


library
  import: dependencies, warnings
  exposed-modules:
    OM.Time
  -- other-modules:
  -- other-extensions:
  hs-source-dirs: src
  default-language: Haskell2010


