cabal-version:       3.0
name:                om-time
version:             0.2.1.0
synopsis:            Time utilities for OM style programming.
-- description:
license:             NONE
license-file:        LICENSE
author:              Rick Owens
maintainer:          rick@owensmurray.com
copyright:           2022 Rick Owens
-- category:
build-type:          Simple
extra-source-files:

common dependencies
  build-depends:
    , aeson        >= 2.0.3.0  && < 2.1
    , base         >= 4.15.1.0 && < 4.16
    , binary       >= 0.8.8.0  && < 0.9
    , clock        >= 0.8.3    && < 0.9
    , lens         >= 5.0.1    && < 5.1
    , om-json      >= 0.2.5.4  && < 0.3
    , swagger2     >= 2.8.4    && < 2.9
    , time         >= 1.9.3    && < 1.10
    , transformers >= 0.5.6.2  && < 0.6

common warnings
  ghc-options:
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Wmissing-import-lists
    -Wredundant-constraints
    -Wall


library
  import: dependencies, warnings
  exposed-modules:
    OM.Time
  -- other-modules:
  -- other-extensions:
  hs-source-dirs: src
  default-language: Haskell2010


